# template_repo_python

./: .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE.txt  README.rst  TEMPLATE.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: tag_version_and_release.yml  unit_testing.yml
docs/: README.rst  requirements.txt
docs/source/: Makefile  changelog.rst  conf.py  glossary.rst  index.rst
docs/source/api/: modules.rst
src/template_repo_python/: skeleton.py
tests/: conftest.py
tests/template_repo_python/: test_skeleton.py
